--- a/teoria/Tema1.Rmd
+++ b/teoria/Tema1.Rmd
@@ -12,7 +12,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE, comment = NA)
 ```
 # Conociendo R
-g
+gasdasdas
 ## ¿Qué es R?
 
 <div class="aligncenter"> 
